forth/test/fail/test_const_fold_redundant_loc_div_zero.af
use' ../../lang.af
fun: test_const_fold_redundant_loc_div_zero { val -- out } 0 /: val val end
